--- a/GAS/View/Account.html
+++ b/GAS/View/Account.html
@@ -10,15 +10,15 @@
 
     <div class="container-fluid zero_margin">
 
-    
-       
+
+
         <div class="row padding-10 zero_margin">
-            
+
             <div class="col-xs-12 col-sm-8 padding-10">
                 <div class="panel panel-default">
                     <div class="panel-heading bg_greyBlue">
                         Accounts
-                        <span class="fa fa-plus" title="Add New Account" ng-click="OpenNewAccount()" 
+                        <span class="fa fa-plus" title="Add New Account" ng-click="OpenNewAccount()"
                               style="margin-left:20px; color:white; height:30px; width:30px; position: absolute;top: 15px; right: 10px;"></span>
                     </div>
 
@@ -65,14 +65,14 @@
                     <div class="panel panel-default">
                         <div class="panel-heading bg_greyBlue" style="background-color:#dbd7e3;">
                             Daily Transaction from {{accName}}
-                         </div>
-                       
-                    
+                        </div>
+
+
                         <canvas id="bar" class="chart chart-bar" chart-colors="chartColors"
                                 chart-data="data" chart-labels="labels" chart-options="accOptions"
                                 chart-series="series" style="width:100%;"></canvas>
-                        </div>
                     </div>
+                </div>
             </div>
             <div class="col-xs-12 col-sm-4 padding-10">
                 <button ng-hide="true" class="btn btn-danger" ng-click="OpenNewAccount()">New Account</button>
@@ -102,19 +102,42 @@
             </div>
         </div>
 
-   
+
 
 
         <div id="newAccModal" ng-show="newAccountDiv" class="layout_modal_Window">
-            <div class="layout_modal_Content" style="width:318px;position:relative;">
+            <div class="layout_modal_Content" style="width:360px;position:relative;">
                 <div class="layout_modal_header">
                     New Account <span ng-click="cancel()" class="fa fa-close"></span>
                 </div>
                 <div class="layout_modal_body">
-                    <label style="width:100px;">Name</label> <input type="text" ng-model="accName" /><br />
-                    <label style="width:100px;">Type</label> <input type="text" ng-model="accType" /><br />
-                    <label style="width:100px;">Number</label> <input type="text" ng-model="accNumber" /><br />
-                    <label style="width:100px;">Description</label> <input type="text" ng-model="accDesc" /><br />
+
+
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Name</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" ng-model="accName" placeholder="Enter name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Type</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" ng-model="accType" placeholder="Account Type">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Number</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" ng-model="accNumber" placeholder="Enter Number">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Description</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" ng-model="accDesc" placeholder="Enter Description">
+                        </div>
+                    </div>
                 </div>
                 <div class="layout_modal_footer" style="padding-right:10px;">
                     <button class="btn btn-success" ng-click="AddAccount()">Okay</button> &nbsp;&nbsp;
