--- a/GAS/View/Project.html
+++ b/GAS/View/Project.html
@@ -141,16 +141,46 @@
 
 
         <div id="newProjectModal" ng-show="newProjectDiv" class="layout_modal_Window">
-            <div class="layout_modal_Content" style="height:250px;width:350px;">
+            <div class="layout_modal_Content" style="width:450px;">
                 <div class="layout_modal_header">
                     New Project <span ng-click="cancel()" title="Close" class="fa fa-close"></span>
                 </div>
                 <div class="layout_modal_body">
-                    <label style="width:100px;">Project Number</label> <input type="text" ng-model="project_number" /><br />
-                    <label style="width:100px;">Client</label> <input type="text" ng-model="clientName" /><br />
-                    <label style="width:100px;">Project Name</label> <input type="text" ng-model="project_name" /><br />
-                    <label style="width:100px;">Value</label> <input type="text" ng-model="project_value" /><br />
-                    <label style="width:100px;">Description</label> <input type="text" ng-model="project_description" /><br />
+
+
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Project Number</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" tabindex="1" ng-model="project_number">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Client</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" tabindex="2" ng-model="clientName">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Project Name</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" tabindex="3" ng-model="project_name">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Value</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" tabindex="4" ng-model="project_value">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="colFormLabel" class="col-sm-4 col-form-label">Description</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" tabindex="5" ng-model="project_description">
+                        </div>
+                    </div>
                 </div>
                 <div class="layout_modal_footer">
                     <button class="btn btn-success" ng-click="AddProject()">Add</button> &nbsp;&nbsp; 
