--- a/GAS/View/Transaction.html
+++ b/GAS/View/Transaction.html
@@ -94,16 +94,48 @@
 
 
                 <div id="newTransferDialog" ng-show="newTransfer" class="layout_modal_Window">
-                    <div class="layout_modal_Content" style="width:350px;position:relative;">
+                    <div class="layout_modal_Content" style="width:380px;position:relative;">
                         <div class="layout_modal_header"> Transfer:  <span ng-click="newTransfer=false" class="fa fa-close"></span> </div>
                         <div class="layout_modal_body">
-                            <form name="Transfer" style="width:320px;margin:10px auto; text-align:left;">
-                                <label style="width:130px;">Name: </label> <input name="transferName" tabindex="0" type="text" ng-model="transfer_name" style="width:150px;" required text-length> <br />
-                                <label style="width:130px;"> Transaction Type: </label> <label>Transfer</label><br />
-                                <label style="width:130px;"> From Account: </label> <select tabindex="1" style="width:150px;height:22px;" ng-model="selFromAcc" ng-options="acc.AccountName for acc in AccountList"></select><br />
-                                <label style="width:130px;"> To Account: </label> <select tabindex="2" style="width:150px;height:22px;" ng-model="selToAcc" ng-options="acc.AccountName for acc in AccountList"></select><br />
-                                <label style="width:130px;"> Amount :</label> <input name="Amount" tabindex="3" type="text" ng-model="transfer_amount" style="width:150px;" required min-amount /><br />
-                                <label style="width:130px;"> Remark :</label>  <input name="Remark" tabindex="4" type="text" ng-model="transfer_remark" style="width:150px;" required text-length /><br />
+                            <form name="Transfer" style="width:340px;margin:10px auto; text-align:left;">
+                                <div class="form-group row">
+                                    <label for="colFormLabel" class="col-sm-4 col-form-label">Name:</label>
+                                    <div class="col-sm-8">
+                                        <input type="text" class="form-control" name="transferName" tabindex="0" ng-model="transfer_name">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="colFormLabel" class="col-sm-6 col-form-label">Transaction Type:</label>
+                                    <div class="col-sm-6">
+                                        <label>Transfer</label>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="colFormLabel" class="col-sm-4 col-form-label">From Account:</label>
+                                    <div class="col-sm-8">
+                                        <select tabindex="1" class="form-control" ng-model="selFromAcc" ng-options="acc.AccountName for acc in AccountList"></select>
+
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="colFormLabel" class="col-sm-4 col-form-label">To Account:</label>
+                                    <div class="col-sm-8">
+                                        <select tabindex="2" class="form-control" ng-model="selToAcc" ng-options="acc.AccountName for acc in AccountList"></select>
+
+                                    </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="colFormLabel" class="col-sm-4 col-form-label">Amount:</label>
+                                        <div class="col-sm-8">
+                                            <input type="text" class="form-control" name="transferName" tabindex="0" ng-model="transfer_amount" required min-amount>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label for="colFormLabel" class="col-sm-4 col-form-label">Remark:</label>
+                                        <div class="col-sm-8">
+                                            <input type="text" class="form-control" name="transferName" tabindex="0" ng-model="transfer_remark" required text-length>
+                                        </div>
+                                    </div>
                             </form>
                         </div>
                         <div class="layout_modal_footer">
@@ -142,16 +174,47 @@
                 </div>
 
         <div id="newSalaryDialog" ng-show="newSalary" class="layout_modal_Window">
-            <div class="layout_modal_Content" style="width:350px;position:relative">
+            <div class="layout_modal_Content" style="width:480px;position:relative">
                 <div class="layout_modal_header"> Salary:  <span ng-click="newSalary=false" class="fa fa-close"></span> </div>
                 <div class="layout_modal_body">
-                    <form name="salary" style="width:320px;margin:10px auto; text-align:left;">
-                        <label style="width:150px;">Employee: </label> <input name="employeeName" tabindex="0" type="text" ng-model="employee_name" style="width:150px;" required text-length> <br />
-                        <label style="width:150px;"> Transaction Type: </label> <label>Salary</label><br />
-                        <label style="width:150px;"> From Account: </label> <select tabindex="2" ng-model="selFromAcc" style="width:150px;height: 22px;" ng-options="acc.AccountName for acc in AccountList"></select><br />
-                        <label style="width:150px;"> Load On Project ? </label> {{ProjectName}} <button class="btn btn-link" ng-click="SelectProject()">Select Project</button><br />
-                        <label style="width:150px;"> Amount :</label> <input name="Amount" tabindex="4" type="text" ng-model="salary_amount" style="width:150px;" required min-amount /><br />
-                        <label style="width:150px;"> Remark :</label>  <input name="Remark" tabindex="5" type="text" ng-model="salary_Remarks" style="width:150px;" required text-length /><br />
+                    <form name="salary" >
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-4 col-form-label">Employee</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" name="employeeName" tabindex="0" type="text" ng-model="employee_name">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-4 col-form-label">Transaction Type:</label>
+                            <div class="col-sm-8">
+                                <label class="form-control">Salary </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-4 col-form-label">From Account:</label>
+                            <div class="col-sm-8">
+                                <select class="form-control" tabindex="2" ng-model="selFromAcc" ng-options="acc.AccountName for acc in AccountList"></select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-4 col-form-label">Load On Project ?</label>
+                            <div class="col-sm-8 form-inline">
+                                {{ProjectName}}<button class="btn btn-link" ng-click="SelectProject()">Select Project</button>
+                           
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-4 col-form-label">Amount:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" name="Amount" tabindex="4" ng-model="salary_amount">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="colFormLabel" class="col-sm-4 col-form-label">Remark:</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" name="Remark" tabindex="5" ng-model="salary_Remarks">
+                            </div>
+                        </div>
                     </form>
                 </div>
                 <div class="layout_modal_footer">
