--- a/GAS/View/ProjectDetail.html
+++ b/GAS/View/ProjectDetail.html
@@ -367,10 +367,10 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-xs-6">
-                                <label style="width:100px;">Project Name:</label> <label>{{Project.ProjectName}}</label>
+                                <label>Project Name:</label> <label>{{Project.ProjectName}}</label>
                             </div>
                             <div class="col-xs-6">
-                                <label style="width:105px;">Project Number:</label> <label>{{Project.ProjectNumber}}</label>
+                                <label>Project Number:</label> <label>{{Project.ProjectNumber}}</label>
                             </div>
                         </div>
                         <div class="row">
@@ -378,7 +378,7 @@
                                 <label style="width:100px;">Client:</label> <label>{{Project.ClientName}}</label>
                             </div>
                             <div class="col-xs-6">
-                                <label style="width:100px;">Invoice No:</label> <input type="text" style="width:100px;" ng-model="invoice_number" />
+                                <label style="width:100px;">Invoice No:</label> <input type="text"style="width:100px;" ng-model="invoice_number" />
                             </div>
                         </div>
 
