--- a/GAS/View/User.html
+++ b/GAS/View/User.html
@@ -209,9 +209,9 @@
                 <div class="panel-body" style="background-color: #fff;">
                     <div class="layout_modal_body container-fluid">
                         <form name="newData" style="margin:5px 5px; text-align:left;">
-                            <div class="row">
-                                Search By Mobile : <input name="MobileNumber" tabindex="0" type="text" ng-model="SearchMobile" style="width:147px;" required text-length>
-                                <span ng-click="GetUser()" class="fa fa-search"></span>
+                            <div class="row form-inline">
+                                Search By Mobile : <input name="MobileNumber" tabindex="0" class="form-control" type="text" ng-model="SearchMobile" style="width:187px;" required text-length>
+                                <span ng-click="GetUser()" class="fa fa-search fa-2x"></span>
                             </div>
                             <div class="row">
                                 <label>{{UserText}}</label>
