--- a/GAS/View/Account.html
+++ b/GAS/View/Account.html
@@ -18,7 +18,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading bg_greyBlue">
                         Accounts
-                        <span class="fa fa-plus" title="Add New Account" ng-click="OpenNewAccount()"
+                        <span class="fa fa-plus-square-o fa-3x" title="Add New Account" ng-click="OpenNewAccount()"
                               style="margin-left:20px; color:white; height:30px; width:30px; position: absolute;top: 15px; right: 10px;"></span>
                     </div>
 
