--- a/GAS/View/Activity.html
+++ b/GAS/View/Activity.html
@@ -53,11 +53,11 @@
                                         <img on-toggle="" src="Images/Icon/excel.jpg" title="Export to Excel" ng-click="exportToExcel('#ActivityData')" style="width:30px;height:30px;border-radius:50%;
                                              position: absolute;top:5px; right: 110px;" />
 
-                                        <img on-toggle="" src="Images/Icon/logo_add.png" title="New Activity" ng-click="ShowNewActivityForm()" style="width:30px;height:30px;border-radius:50%;
-                                             position: absolute;top:5px; right: 70px;" />
+                                        <i class="fa fa-plus-square fa-3x" title="New Activity" ng-click="ShowNewActivityForm()" style="height:30px;border-radius:50%;
+                                             position: absolute;top:5px; right: 70px;" ></i>
 
-                                        <img src="Images/Icon/logo_add.png" title="Quick Activity" ng-click="ShowQuickExpenseForm()" style="width:30px;height:30px;border-radius:50%;
-                                            position: absolute;top:5px; right: 20px;" />
+                                        <i class="fa fa-check-square fa-3x" title="Quick Activity" ng-click="ShowQuickExpenseForm()" style="width:30px;height:30px;border-radius:50%;
+                                            position: absolute;top:5px; right: 20px;" > </i>
 
 
                                     </div>
@@ -200,7 +200,7 @@
                     </div>
                 </div>
                 <div ng-show="newActivity_progress" class="loader_div">
-                    <img style="height:20px;width:20px;z-index:15;position:absolute; top:50%;left:310px;" src="Images/Icon/ajax-loader.gif" />
+                    <img style="height:20px;width:20px;z-index:15;position:absolute; top:60%;left:50%;" src="Images/Icon/ajax-loader.gif" />
                 </div>
             </div>
 
