--- a/GAS/View/Project.html
+++ b/GAS/View/Project.html
@@ -25,8 +25,8 @@
                                 <img on-toggle="" src="Images/Icon/logo_Filter.png" title="Add New Project" ng-click="ToggleFilter()"  style="width:30px;height:30px;border-radius:50%;
                              position: absolute;top:12px; right: 70px;" />
  
-                        <img src="Images/Icon/logo_add.png" title="Add New Project" ng-click="open()" style="width:30px;height:30px;border-radius:50%;
-                            position: absolute;top:12px; right: 20px;" />
+                        <span title="Add New Project" class="fa fa-plus-square-o fa-3x" ng-click="open()" style="width:30px;height:30px;border-radius:50%;
+                            position: absolute;top:12px; right: 20px;" > </span>
 
                     </div>
                     <div ng-show="ShowFilter" style="display:inline-block;background-color:grey; z-index:500; position: absolute;top:30px; right: 90px; padding:10px;">
